--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,6 +6,12 @@
 	"image": "mcr.microsoft.com/devcontainers/javascript-node:0-16",
 	"customizations": {
 		"vscode": {
+			"settings": {
+				"editor.defaultFormatter": "esbenp.prettier-vscode",
+				"workbench.editorAssociations": {   
+					"*.md": "vscode.markdown.preview.editor"
+				}
+			},
 			"extensions": ["learn-pack.learnpack-vscode"]
 		}
 	},
